# ed25519-axolotl

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
.github/workflows/: build.yml  deploy.yml
src/: lib.rs  main.rs  new.rs  utils.rs
src/crypto/: keys.rs  mod.rs  signatures.rs
src/utils/: extras.rs  mod.rs  random.rs
tests/crypto/: keys.rs  mod.rs  signatures.rs
tests/utils/: random.rs
