[package]
name = "ed25519-axolotl"
version = "1.7.0"
edition = "2021"
description = "Ed25519-like signatures with X25519 keys, Axolotl-style."
repository = "https://github.com/lunes-platform/ed25519-axolotl.git"
authors = ["Lunes Platform <development@lunes.io>"]
license = "MIT"
keywords = ["ed25519", "axolotl", "lunes", "cryptography", "cryptocurrencies"]
categories = ["algorithms", "cryptography::cryptocurrencies", "cryptography", "wasm"]
readme = "README.md"

[dependencies]
pyo3 = { version = "0.16.0", features = ["extension-module"] }
rand = "0.8.4"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ed25519_axolotl"
