[package]
name = "ed25519-axolotl"
version = "1.7.0"
edition = "2021"
description = "Ed25519-like signatures with X25519 keys, Axolotl-style."
repository = "https://github.com/lunes-platform/ed25519-axolotl.git"
license = "Apache-2.0"
keywords = ["ed25519", "axolotl", "lunes", "cryptography", "cryptocurrencies"]
categories = ["cryptography", "cryptocurrencies", "lunes", "wasm", "blockchain"]
readme = "README.md"


[dependencies]
rand = "0.8.4"
